--- a/.gitignore
+++ b/.gitignore
@@ -45,7 +45,7 @@ jspm_packages/
 logs/
 
 #Public directories
-img/
+public/img/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
