--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,4 @@
+PORT = 3000
 botToken = 1764021842:AAEoEV9tsA-8lRntUc_UfL2Cqx-M1rw0_ls
 MONGO_URI = mongodb://localhost:27017/bot_db
 GET_GROUPS_URI = https://data.nadpco.com/v1/BaseInfo/Groups
