--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "auto-bind": "^4.0.0",
     "axios": "^0.21.1",
     "config": "^3.3.6",
     "debug": "^4.3.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
     "jalali-moment": "^3.3.10",
-    "mongoose": "^5.12.7",
+    "mongoose": "^5.12.9",
     "morgan": "^1.10.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "telegraf": "^4.3.0",
     "winston": "^3.3.3"
   },
