--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "author": {
     "name": "Mohammad Javad Majidinia",
-    "github": "https://github.com/mamalli11/"
+    "github": "https://github.com/mamalli11/BourseBot"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development DEBUG=bot nodemon index",
@@ -19,6 +19,7 @@
     "config": "^3.3.6",
     "debug": "^4.3.1",
     "dotenv": "^9.0.2",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jalali-moment": "^3.3.10",
     "mongoose": "^5.12.9",
