--- a/package.json
+++ b/package.json
@@ -3,36 +3,35 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "keywords": [],
+  "license": "MIT",
   "author": {
     "name": "Mohammad Javad Majidinia",
     "github": "https://github.com/mamalli11/BourseBot"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development DEBUG=bot nodemon index",
-    "start": "cross-env NODE_ENV=production node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node index"
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
     "auto-bind": "^4.0.0",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "config": "^3.3.6",
-    "debug": "^4.3.1",
+    "debug": "^4.3.2",
     "dotenv": "^9.0.2",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jalali-moment": "^3.3.10",
-    "mongoose": "^5.12.9",
+    "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "telegraf": "^4.3.0",
+    "telegraf": "^4.4.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.7"
-  },
-  "keywords": [],
-  "license": "MIT"
+    "nodemon": "^2.0.15"
+  }
 }
